--- a/ex1-login-page/index.html
+++ b/ex1-login-page/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSS Framework (Tailwind) Exercise 1</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Framework (Tailwind) Exercise 1</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+  </head>
 
-<body>
-  <!-- Start coding here -->
-</body>
+  <body class="h-full bg-slate-200 m-0 flex justify-center items-center">
+    <div class="flex justify-center items-start flex-col bg-white rounded-xl p-5 gap-4">
+      <div class="text-zinc-600 text-xl">
+        <h2 class="">Login to Website
+        </h2>
+      </div>
+
+      <div class="">
+        <form class="">
+          <div class="gap-2 flex flex-col">
+            <div class="flex justify-between items-center">
+              <div><label for="email" class="">Email</label></div>
+              <div><input id="email" name="email" type="email" autocomplete="email"
+                  class="border border-zinc-600 p-2 hover:border-violet-500 focus:border-violet-300 rounded-md"></div>
+
+            </div>
+
+            <div>
+              <div class="flex items-center justify-center ">
+                <div><label for="password" class="">Password</label>
+                </div>
+                <div><input id="password" name="password" type="password" autocomplete="current-password"
+                    class="border border-zinc-600 p-2 hover:border-violet-500 focus:border-violet-300 rounded-md">
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="flex justify-evenly items-center">
+        <button type="submit"
+          class="w-36 p-2 rounded-full bg-violet-500 text-white active:bg-violet-600 hover:bg-violet-400 focus:ring-violet-300">Sign
+          in</button>
+        <button type="submit"
+          class="w-36 p-2 rounded-full bg-white text-violet-500  hover:bg-violet-100 focus:ring-violet-300 focus:text-violet-600">Sign
+          Up</button>
+      </div>
+      </form>
+    </div>
+    </div>
+  </body>
 
 </html>
