--- a/ex1-login-page/index.html
+++ b/ex1-login-page/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Framework (Tailwind) Exercise 1</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSS Framework (Tailwind) Exercise 1</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <body class="bg-slate-200">
+    <form class="flex flex-col justify-center items-center w-screen h-screen">
+      <div class="bg-white w-auto h-auto px-2 py-4 rounded-xl">
+        <p class="text-zinc-600 text-xl px-4">Login to Website</p>
 
-<body>
-  <!-- Start coding here -->
-</body>
+        <div class="flex justify-between items-center p-2">
+          <label for="email" class="font-bold p-2 text-left">Email</label>
+          <input
+            id="email"
+            type="email"
+            class="w-50 h-10 border-solid border-2 border-zinc-600/2 p-2 rounded-md hover:border-violet-500 focus:border-violet-300"
+          />
+        </div>
 
+        <div class="flex justify-between items-center p-2">
+          <label for="password" class="font-bold p-2 text-left">Password</label>
+          <input
+            id="password"
+            type="password"
+            class="w-50 h-10 border-solid border-2 border-zinc-600/2 p-2 rounded-md hover:border-violet-500 focus:border-violet-300"
+          />
+        </div>
+
+        <div class="flex justify-center items-center">
+          <button
+            type="submit"
+            class="w-36 p-2 m-3 rounded-full bg-violet-500 text-white active:bg-violet-600 hover:bg-violet-400 focus:ring-4 ring-violet-300"
+          >
+            Sign In
+          </button>
+          <button
+            type="submit"
+            class="w-36 p-2 m-3 rounded-full bg-white text-violet-600 hover:bg-violet-100 focus:ring-4 ring-violet-300"
+          >
+            Sign Up
+          </button>
+        </div>
+      </div>
+    </form>
+  </body>
 </html>
