--- a/ex1-login-page/index.html
+++ b/ex1-login-page/index.html
@@ -9,8 +9,38 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-  <!-- Start coding here -->
+<body class="bg-slate-200 flex flex-col justify-center items-center h-screen">
+  <form class="bg-white rounded-xl w-1/3.5 h-1/2.5">
+    <div class="text-xl text-zinc-600 p-5">Login to Website</div>
+    <div class="pl-5 pr-8 flex flex-row justify-between items-center">
+      <div><label>Email</label></div>
+      <div>
+        <input
+          class="border border-zinc-600 p-2 rounded-md border-2 hover:border-violet-300 focus:outline-none focus:border-violet-500"
+          type="email"
+        />
+      </div>
+    </div>
+    <div class="pt-3 pl-5 pr-8 flex flex-row justify-between items-center">
+      <label>Password</label>
+      <input
+        class="border border-zinc-600 p-2 rounded-md border-2 hover:border-violet-300 focus:outline-none focus:border-violet-500"
+        type="password"
+      />
+    </div>
+    <div class="p-5">
+      <button
+        class="rounded-full w-36 bg-violet-500 text-white p-2 hover:bg-violet-400 active:bg-violet-600 focus:outline-none focus:ring focus:ring-violet-300"
+      >
+        Sign in
+      </button>
+      <button
+        class="rounded-full w-36 bg-white text-violet-500 p-2 hover:bg-violet-100 focus:outline-none focus:ring focus:ring-violet-300 text-violet-600"
+      >
+        Sign Up
+      </button>
+    </div>
+  </form>
 </body>
 
 </html>
