--- a/ex1-login-page/index.html
+++ b/ex1-login-page/index.html
@@ -29,7 +29,7 @@
 
             <div>
               <div class="flex items-center justify-center ">
-                <div><label for="password" class="">Password</label>
+                <div><label for="password" class="mr-5 ">Password</label>
                 </div>
                 <div><input id="password" name="password" type="password" autocomplete="current-password"
                     class="border border-zinc-600 p-2 hover:border-violet-500 focus:border-violet-300 rounded-md">
