fix(exercise): fix wrong border color

--- a/ex1-login-page/index.html
+++ b/ex1-login-page/index.html
@@ -18,7 +18,7 @@
           <input
             id="email"
             type="email"
-            class="w-50 h-10 border-solid border-2 border-zinc-600/2 p-2 rounded-md hover:border-violet-500 focus:border-violet-300"
+            class="w-50 h-10 border-solid border-2 border-zinc-600/2 p-2 rounded-md hover:border-violet-500 focus:outline-violet-300"
           />
         </div>
 
@@ -27,7 +27,7 @@
           <input
             id="password"
             type="password"
-            class="w-50 h-10 border-solid border-2 border-zinc-600/2 p-2 rounded-md hover:border-violet-500 focus:border-violet-300"
+            class="w-50 h-10 border-solid border-2 border-zinc-600/2 p-2 rounded-md hover:border-violet-500 focus:outline-violet-300"
           />
         </div>
 
